--- a/ser2tcp.vcxproj
+++ b/ser2tcp.vcxproj
@@ -41,6 +41,7 @@
     <Library Include="..\libuv\Debug\lib\libuv.lib" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="config.toml" />
     <None Include="install.bat" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
